--- a/Resources/Private/Templates/Upload/Form.html
+++ b/Resources/Private/Templates/Upload/Form.html
@@ -1,5 +1,10 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
-
+    <f:form action="upload" name="upload" object="{upload}" method="POST" enctype="multipart/form-data">
+        <f:render partial="Upload/Properties" arguments="{upload: upload}" />
+        <div class="mt-3">
+            <f:form.submit name="submit" class="btn btn-primary" value="{f:translate(key:'upload.form.submit.label', extensionName: 'filetransfer')}" />
+        </div>
+    </f:form>
 </f:section>
