- [FEATURE] Add Fileupload.js Module to handle drag und drop file area - [FEATURE] Implement Drag and Drop file upload (clientwise) - [FEATURE] Add Constant Editor option to include utilities.css which has some bootstrap classes - [FEATURE] Add some basic css styling

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,1 +1,4 @@
+<f:if condition="{settings.template.includeUtilities}">
+    <f:asset.css identifier="filetransfer_utilities" href="EXT:filetransfer/Resources/Public/Css/utilities.css" />
+</f:if>
 <f:render section="Main" />
