--- a/Resources/Private/Partials/Upload/Properties.html
+++ b/Resources/Private/Partials/Upload/Properties.html
@@ -5,7 +5,7 @@
     <div class="upload-dropzone--error-unsupported-type d-none mb-3">
         <f:translate key="form.upload.dropZone.error.unsupported_type" extensionName="filetransfer" />
     </div>
-    <f:form.upload property="asset" class="form-control upload-dropzone-input" required="true" placeholder="{f:translate(key: 'form.upload.fileupload', extensionName: 'filetransfer')}" accept=".zip,.tar,.gz" />
+    <f:form.upload name="asset" class="form-control upload-dropzone-input" required="true" placeholder="{f:translate(key: 'form.upload.fileupload', extensionName: 'filetransfer')}" accept=".zip,.tar,.gz" />
 </div>
 <div class="mb-3 upload-senderaddress">
     <f:form.textfield property="senderAddress" type="email" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.sender_address')}" />
@@ -20,10 +20,11 @@
     <f:form.textarea property="message" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.message')}" />
 </div>
 <div class="mb-3 upload-validityduration">
-    <f:form.select property="validityDuration" class="form-select" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.validity_duration')}">
+    <f:form.select property="validityDurationInDays" class="form-select" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.validity_duration')}">
         <f:form.select.option value="3"><f:translate key="form.upload.validity_duration.I.3days" extensionName="filetransfer" /></f:form.select.option>
     </f:form.select>
 </div>
 <div class="mb-3 upload-downloadedlimit">
-    <f:form.textfield property="downloadLimit" type="number" min="1" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.download_limit')}" />
+    <label for="downloadLimit"><f:translate key="LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.download_limit" extensionName="filetransfer" /></label>
+    <f:form.textfield id="downloadLimit" property="downloadLimit" type="number" min="1" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.download_limit')}" />
 </div>
