- [FEATURE] Add upload success message

--- a/Resources/Private/Templates/Upload/Success.html
+++ b/Resources/Private/Templates/Upload/Success.html
@@ -1,5 +1,5 @@
 <f:layout name="Default" />
 
 <f:section name="Main">
-
+    <div class="alert alert-success"><f:translate key="form.upload.success" extensionName="filetransfer" /></div>
 </f:section>
