--- a/Resources/Public/Css/utilities.css
+++ b/Resources/Public/Css/utilities.css
@@ -88,6 +88,11 @@
     font-weight: 400;
     line-height: 1.5;
 }
+
+.form-text {
+    padding: 0.5rem;
+    font-size: 0.9rem;
+}
 /**********************************************************
  * FORM - END
  *********************************************************/
