--- a/Resources/Private/Partials/Upload/Properties.html
+++ b/Resources/Private/Partials/Upload/Properties.html
@@ -21,7 +21,7 @@
     <f:form.textarea property="message" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.message')}" />
 </div>
 <div class="mb-3 upload-validityduration">
-    <f:form.select property="validityDurationInDays" class="form-select" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.validity_duration')}">
+    <f:form.select property="validityDurationInDays" class="form-select" required="true">
         <f:form.select.option value="3"><f:translate key="form.upload.validity_duration.I.3days" extensionName="filetransfer" /></f:form.select.option>
     </f:form.select>
 </div>
