- [BUGFIX] Upload Model: Set start value for receiverAddress and senderAddress - [BUGFIX] Reduces incoming $_FILES to the current, because we only support one file - [BUGFIX] GarbageCollector: getOriginalResource first before getOriginalFile

--- a/Resources/Private/Partials/Upload/Properties.html
+++ b/Resources/Private/Partials/Upload/Properties.html
@@ -27,5 +27,5 @@
 </div>
 <div class="mb-3 upload-downloadedlimit">
     <label for="downloadLimit"><f:translate key="LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.download_limit" extensionName="filetransfer" /></label>
-    <f:form.textfield id="downloadLimit" property="downloadLimit" type="number" min="1" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.download_limit')}" />
+    <f:form.textfield id="downloadLimit" property="downloadLimit" type="number" additionalAttributes="{min: '1'}" class="form-control" required="true" placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.download_limit')}" />
 </div>
