- [FEATURE] Upload all types of file extensions - [FEATURE] Upload multiple files

--- a/Resources/Private/Partials/Upload/Properties.html
+++ b/Resources/Private/Partials/Upload/Properties.html
@@ -5,7 +5,7 @@
     <div class="upload-dropzone--error-unsupported-type d-none mb-3">
         <f:translate key="form.upload.dropZone.error.unsupported_type" extensionName="filetransfer" />
     </div>
-    <f:form.upload name="asset" class="form-control upload-dropzone-input" additionalAttributes="{required: 'true'}" accept=".zip,.tar,.gz" multiple="0"/>
+    <f:form.upload name="asset" class="form-control upload-dropzone-input" additionalAttributes="{required: 'true'}" multiple="1"/>
     <div class="form-text"><f:translate key="form.upload.fileupload"  extensionName="filetransfer" /></div>
 </div>
 <div class="mb-3 upload-senderaddress">
