- [BUGFIX] HTML Error on receiver email

--- a/Resources/Private/Partials/Upload/Properties.html
+++ b/Resources/Private/Partials/Upload/Properties.html
@@ -15,7 +15,7 @@
         placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.sender_address')}" />
 </div>
 <div class="mb-3 upload-receiveraddress">
-    <f:form.textfield property="receiverAddress" type="email" class="form-control" required="true" auto
+    <f:form.textfield property="receiverAddress" type="email" class="form-control" required="true"
         placeholder="{f:translate(key:'LLL:EXT:filetransfer/Resources/Private/Language/locallang_db.xlf:tx_filetransfer_domain_model_upload.receiver_address')}"
         additionalAttributes="{autocomplete: 'off'}" />
 </div>
